--- a/src/css/new_style.css
+++ b/src/css/new_style.css
@@ -525,3 +525,21 @@ p {
     color: white;
     background-color: #4f6c9d;
 }
+
+.redimension{
+    height: 150px;
+    width: 150px;
+}
+
+#descripcion{
+    display: inline-block;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 1.2rem;
+    padding: 0;
+    border: 0;
+    margin-top: 10px;
+}
