--- a/src/css/style.css
+++ b/src/css/style.css
@@ -470,3 +470,16 @@ margin-left: 1.5rem;
   margin-bottom: 40px;
   color: white;
 }
+
+#cerrar-juego {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+}
+
+#cerrar-juego {
+  width: 40px;
+  height: 40px;
+  background-color: #8c5840;
+  color: white;
+}
