--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,10 @@ button {
     letter-spacing: 1px;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 #353c60;
+    /* 
+    Este bloque de código CSS establece la propiedad de transición para los navegadores webkit, moz y estándar.
+    Especifica una transición ease-out con una duración de 0.4 segundos.
+    */
     -webkit-transition: ease-out 0.4s;
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
@@ -68,22 +72,42 @@ button:hover {
     background-image: url('../img/ezgif.com-gif-maker.gif');
     background-size: cover;
     background-position: center;
-    filter: blur(1.8px); /* Ajusta el valor de desenfoque según sea necesario */
+    filter: blur(1.8px); /* Aplicamos un efecto de desenfoque a un elemento */
     z-index: -1;
 }
 
 .contenido-vistas {
-    background: rgba(63, 90, 120, 0.44);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(7.7px);
-    -webkit-backdrop-filter: blur(7.7px);
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 5% auto;
+  background: rgba(63, 90, 120, 0.44);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.7px);
+  -webkit-backdrop-filter: blur(7.7px);
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5% auto;
+}
+
+@media screen and (max-width: 768px) {
+  .contenido-vistas {
+    width: fit-content;
+    padding: 0 20px;
+  }
+  
+  #vista-menu-usuario > .contenido-vistas {
+    width: fit-content;
+    padding: 0 40px;
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+  .contenido-vistas, #vista-menu-usuario > .contenido-vistas {
+    width: fit-content;
+    padding: 0 20px;
+  }
 }
 
 /* Reglas especificas */
@@ -98,10 +122,13 @@ body > #vista-login {
     font-family: "Roboto", sans-serif;
 }
 
+/* 
+Los pseudo-elementos ::before y ::after permiten agregar contenido antes y después del contenido principal de un elemento
+*/
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
@@ -135,7 +162,6 @@ body > #vista-login {
     display: flex;
     flex-direction: column;
     color: white;
-    
     background: rgba(63, 90, 120, 0.44);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -500,5 +526,3 @@ margin-left: 1.5rem;
 #header-parametros-juego {
   color: white;
 }
-
-/*  */
