--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,23 +31,26 @@ body {
 }
 
 button {
-    color: #000000;
-    border: 2px solid rgb(3, 3, 3);
-    border-radius: 10px;
-    padding: 18px 36px;
-    display: inline-block;
-    font-size: 18px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    box-shadow: inset 0 0 0 0 #353c60;
-    /* 
-    Este bloque de código CSS establece la propiedad de transición para los navegadores webkit, moz y estándar.
-    Especifica una transición ease-out con una duración de 0.4 segundos.
-    */
-    -webkit-transition: ease-out 0.4s;
-    -moz-transition: ease-out 0.4s;
-    transition: ease-out 0.4s;
-    width: 200px;
+  color: #000000;
+  border: 2px solid rgb(3, 3, 3);
+  border-radius: 10px;
+  padding: 18px 36px;
+  display: inline-block;
+  font-size: 18px;
+  letter-spacing: 1px;
+
+  /* Cursor que se muestra al pasar sobre el botón */
+  cursor: pointer;
+
+  /* Sombra dentro del botón para darle un efecto tridimensional */
+  box-shadow: inset 0 0 0 0 #353c60;
+
+  /* Transición para suavizar cambios en las propiedades durante 0.4 segundos */
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+
+  width: 200px;
 }
 
 button:hover {
@@ -61,6 +64,12 @@ button:hover {
     height: 100vh;
     overflow: hidden;
 }
+
+/* 
+  El pseudo-elemento ::before en CSS se utiliza para insertar contenido antes del contenido de un elemento.
+  Se utiliza comúnmente para agregar contenido decorativo o informativo a un elemento, como iconos o etiquetas.
+  El contenido agregado con ::before se posiciona antes del contenido real del elemento y se puede estilizar utilizando propiedades CSS.
+*/
 
 .vistas::before {
     content: "";
